HelloParser.py
# Generated from /Users/anastasia/PycharmProjects/Compiler/Hello.g4 by ANTLR 4.7
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO
import sys



class HelloParser ( Parser ):

    grammarFileName = "Hello.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"'var'", u"':'", u"'is'", u"'type'", 
                     u"'integer'", u"'real'", u"'boolean'", u"'record'", 
                     u"'end'", u"'array'", u"'['", u"']'", u"':='", u"'('", 
                     u"','", u"')'", u"'while'", u"'loop'", u"'for'", u"'in'", 
                     u"'reverse'", u"'..'", u"'if'", u"'then'", u"'else'", 
                     u"'routine'", u"'and'", u"'or'", u"'xor'", u"'<'", 
                     u"'<='", u"'>'", u"'>='", u"'='", u"'/='", u"'*'", 
                     u"'/'", u"'%'", u"'+'", u"'-'", u"'not'", u"'true'", 
                     u"'false'", u"'.'", u"';'" ]

    symbolicNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"Identifier", u"Keyword", 
                      u"BinaryOperator", u"RelationalOperator", u"MultiplicationOperator", 
                      u"AdditionOperator", u"IntegerLiteral", u"RealLiteral", 
                      u"WHITE_SPACE", u"COMMENT", u"LINE_COMMENT", u"TERMINATOR" ]

    RULE_program = 0
    RULE_simpleDeclaration = 1
    RULE_variableDeclaration = 2
    RULE_typeDeclaration = 3
    RULE_lang_type = 4
    RULE_primitiveType = 5
    RULE_userType = 6
    RULE_recordType = 7
    RULE_arrayType = 8
    RULE_statement = 9
    RULE_assignment = 10
    RULE_routineCall = 11
    RULE_whileLoop = 12
    RULE_forLoop = 13
    RULE_lang_range = 14
    RULE_ifStatement = 15
    RULE_routineDeclaration = 16
    RULE_parameters = 17
    RULE_parameterDeclaration = 18
    RULE_body = 19
    RULE_expression = 20
    RULE_relation = 21
    RULE_simple = 22
    RULE_factor = 23
    RULE_summand = 24
    RULE_primary = 25
    RULE_modifiablePrimary = 26
    RULE_eos = 27

    ruleNames =  [ u"program", u"simpleDeclaration", u"variableDeclaration", 
                   u"typeDeclaration", u"lang_type", u"primitiveType", u"userType", 
                   u"recordType", u"arrayType", u"statement", u"assignment", 
                   u"routineCall", u"whileLoop", u"forLoop", u"lang_range", 
                   u"ifStatement", u"routineDeclaration", u"parameters", 
                   u"parameterDeclaration", u"body", u"expression", u"relation", 
                   u"simple", u"factor", u"summand", u"primary", u"modifiablePrimary", 
                   u"eos" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    Identifier=46
    Keyword=47
    BinaryOperator=48
    RelationalOperator=49
    MultiplicationOperator=50
    AdditionOperator=51
    IntegerLiteral=52
    RealLiteral=53
    WHITE_SPACE=54
    COMMENT=55
    LINE_COMMENT=56
    TERMINATOR=57

    def __init__(self, input, output=sys.stdout):
        super(HelloParser, self).__init__(input, output=output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(HelloParser.ProgramContext, self).__init__(parent, invokingState)
            self.parser = parser

        def simpleDeclaration(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(HelloParser.SimpleDeclarationContext)
            else:
                return self.getTypedRuleContext(HelloParser.SimpleDeclarationContext,i)


        def eos(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(HelloParser.EosContext)
            else:
                return self.getTypedRuleContext(HelloParser.EosContext,i)


        def routineDeclaration(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(HelloParser.RoutineDeclarationContext)
            else:
                return self.getTypedRuleContext(HelloParser.RoutineDeclarationContext,i)


        def getRuleIndex(self):
            return HelloParser.RULE_program

        def enterRule(self, listener):
            if hasattr(listener, "enterProgram"):
                listener.enterProgram(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitProgram"):
                listener.exitProgram(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitProgram"):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = HelloParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << HelloParser.T__0) | (1 << HelloParser.T__3) | (1 << HelloParser.T__25))) != 0):
                self.state = 62
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [HelloParser.T__0, HelloParser.T__3]:
                    self.state = 56
                    self.simpleDeclaration()
                    self.state = 57
                    self.eos()
                    pass
                elif token in [HelloParser.T__25]:
                    self.state = 59
                    self.routineDeclaration()
                    self.state = 60
                    self.eos()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 66
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SimpleDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(HelloParser.SimpleDeclarationContext, self).__init__(parent, invokingState)
            self.parser = parser

        def variableDeclaration(self):
            return self.getTypedRuleContext(HelloParser.VariableDeclarationContext,0)


        def typeDeclaration(self):
            return self.getTypedRuleContext(HelloParser.TypeDeclarationContext,0)


        def getRuleIndex(self):
            return HelloParser.RULE_simpleDeclaration

        def enterRule(self, listener):
            if hasattr(listener, "enterSimpleDeclaration"):
                listener.enterSimpleDeclaration(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitSimpleDeclaration"):
                listener.exitSimpleDeclaration(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitSimpleDeclaration"):
                return visitor.visitSimpleDeclaration(self)
            else:
                return visitor.visitChildren(self)

    def simpleDeclaration(self):
        localctx = HelloParser.SimpleDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_simpleDeclaration)
        try:
            self.state = 69
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [HelloParser.T__0]:
                self.enterOuterAlt(localctx, 1)
                self.state = 67
                self.variableDeclaration()
                pass
            elif token in [HelloParser.T__3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 68
                self.typeDeclaration()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VariableDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(HelloParser.VariableDeclarationContext, self).__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(HelloParser.Identifier, 0)

        def lang_type(self):
            return self.getTypedRuleContext(HelloParser.Lang_typeContext,0)


        def expression(self):
            return self.getTypedRuleContext(HelloParser.ExpressionContext,0)


        def getRuleIndex(self):
            return HelloParser.RULE_variableDeclaration

        def enterRule(self, listener):
            if hasattr(listener, "enterVariableDeclaration"):
                listener.enterVariableDeclaration(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitVariableDeclaration"):
                listener.exitVariableDeclaration(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitVariableDeclaration"):
                return visitor.visitVariableDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def variableDeclaration(self):

        localctx = HelloParser.VariableDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_variableDeclaration)
        self._la = 0 # Token type
        try:
            self.state = 83
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 71
                self.match(HelloParser.T__0)
                self.state = 72
                self.match(HelloParser.Identifier)
                self.state = 73
                self.match(HelloParser.T__1)
                self.state = 74
                self.lang_type()
                self.state = 77
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==HelloParser.T__2:
                    self.state = 75
                    self.match(HelloParser.T__2)
                    self.state = 76
                    self.expression()


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 79
                self.match(HelloParser.T__0)
                self.state = 80
                self.match(HelloParser.Identifier)
                self.state = 81
                self.match(HelloParser.T__2)
                self.state = 82
                self.expression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TypeDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(HelloParser.TypeDeclarationContext, self).__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(HelloParser.Identifier, 0)

        def lang_type(self):
            return self.getTypedRuleContext(HelloParser.Lang_typeContext,0)


        def getRuleIndex(self):
            return HelloParser.RULE_typeDeclaration

        def enterRule(self, listener):
            if hasattr(listener, "enterTypeDeclaration"):
                listener.enterTypeDeclaration(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitTypeDeclaration"):
                listener.exitTypeDeclaration(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitTypeDeclaration"):
                return visitor.visitTypeDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def typeDeclaration(self):

        localctx = HelloParser.TypeDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_typeDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(HelloParser.T__3)
            self.state = 86
            self.match(HelloParser.Identifier)
            self.state = 87
            self.match(HelloParser.T__2)
            self.state = 88
            self.lang_type()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Lang_typeContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(HelloParser.Lang_typeContext, self).__init__(parent, invokingState)
            self.parser = parser

        def primitiveType(self):
            return self.getTypedRuleContext(HelloParser.PrimitiveTypeContext,0)


        def userType(self):
            return self.getTypedRuleContext(HelloParser.UserTypeContext,0)


        def Identifier(self):
            return self.getToken(HelloParser.Identifier, 0)

        def getRuleIndex(self):
            return HelloParser.RULE_lang_type

        def enterRule(self, listener):
            if hasattr(listener, "enterLang_type"):
                listener.enterLang_type(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitLang_type"):
                listener.exitLang_type(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitLang_type"):
                return visitor.visitLang_type(self)
            else:
                return visitor.visitChildren(self)




    def lang_type(self):

        localctx = HelloParser.Lang_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_lang_type)
        try:
            self.state = 93
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [HelloParser.T__4, HelloParser.T__5, HelloParser.T__6]:
                self.enterOuterAlt(localctx, 1)
                self.state = 90
                self.primitiveType()
                pass
            elif token in [HelloParser.T__7, HelloParser.T__9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 91
                self.userType()
                pass
            elif token in [HelloParser.Identifier]:
                self.enterOuterAlt(localctx, 3)
                self.state = 92
                self.match(HelloParser.Identifier)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PrimitiveTypeContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(HelloParser.PrimitiveTypeContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return HelloParser.RULE_primitiveType

        def enterRule(self, listener):
            if hasattr(listener, "enterPrimitiveType"):
                listener.enterPrimitiveType(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitPrimitiveType"):
                listener.exitPrimitiveType(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitPrimitiveType"):
                return visitor.visitPrimitiveType(self)
            else:
                return visitor.visitChildren(self)




    def primitiveType(self):

        localctx = HelloParser.PrimitiveTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_primitiveType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << HelloParser.T__4) | (1 << HelloParser.T__5) | (1 << HelloParser.T__6))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class UserTypeContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(HelloParser.UserTypeContext, self).__init__(parent, invokingState)
            self.parser = parser

        def arrayType(self):
            return self.getTypedRuleContext(HelloParser.ArrayTypeContext,0)


        def recordType(self):
            return self.getTypedRuleContext(HelloParser.RecordTypeContext,0)


        def getRuleIndex(self):
            return HelloParser.RULE_userType

        def enterRule(self, listener):
            if hasattr(listener, "enterUserType"):
                listener.enterUserType(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitUserType"):
                listener.exitUserType(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitUserType"):
                return visitor.visitUserType(self)
            else:
                return visitor.visitChildren(self)




    def userType(self):

        localctx = HelloParser.UserTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_userType)
        try:
            self.state = 99
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [HelloParser.T__9]:
                self.enterOuterAlt(localctx, 1)
                self.state = 97
                self.arrayType()
                pass
            elif token in [HelloParser.T__7]:
                self.enterOuterAlt(localctx, 2)
                self.state = 98
                self.recordType()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RecordTypeContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(HelloParser.RecordTypeContext, self).__init__(parent, invokingState)
            self.parser = parser

        def variableDeclaration(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(HelloParser.VariableDeclarationContext)
            else:
                return self.getTypedRuleContext(HelloParser.VariableDeclarationContext,i)


        def getRuleIndex(self):
            return HelloParser.RULE_recordType

        def enterRule(self, listener):
            if hasattr(listener, "enterRecordType"):
                listener.enterRecordType(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitRecordType"):
                listener.exitRecordType(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitRecordType"):
                return visitor.visitRecordType(self)
            else:
                return visitor.visitChildren(self)




    def recordType(self):

        localctx = HelloParser.RecordTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_recordType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(HelloParser.T__7)
            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==HelloParser.T__0:
                self.state = 102
                self.variableDeclaration()
                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 108
            self.match(HelloParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArrayTypeContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(HelloParser.ArrayTypeContext, self).__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(HelloParser.ExpressionContext,0)


        def lang_type(self):
            return self.getTypedRuleContext(HelloParser.Lang_typeContext,0)


        def getRuleIndex(self):
            return HelloParser.RULE_arrayType

        def enterRule(self, listener):
            if hasattr(listener, "enterArrayType"):
                listener.enterArrayType(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitArrayType"):
                listener.exitArrayType(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitArrayType"):
                return visitor.visitArrayType(self)
            else:
                return visitor.visitChildren(self)




    def arrayType(self):

        localctx = HelloParser.ArrayTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_arrayType)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(HelloParser.T__9)
            self.state = 111
            self.match(HelloParser.T__10)
            self.state = 112
            self.expression()
            self.state = 113
            self.match(HelloParser.T__11)
            self.state = 114
            self.lang_type()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(HelloParser.StatementContext, self).__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(HelloParser.AssignmentContext,0)


        def routineCall(self):
            return self.getTypedRuleContext(HelloParser.RoutineCallContext,0)


        def whileLoop(self):
            return self.getTypedRuleContext(HelloParser.WhileLoopContext,0)


        def forLoop(self):
            return self.getTypedRuleContext(HelloParser.ForLoopContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(HelloParser.IfStatementContext,0)


        def getRuleIndex(self):
            return HelloParser.RULE_statement

        def enterRule(self, listener):
            if hasattr(listener, "enterStatement"):
                listener.enterStatement(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitStatement"):
                listener.exitStatement(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitStatement"):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = HelloParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_statement)
        try:
            self.state = 121
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 116
                self.assignment()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 117
                self.routineCall()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 118
                self.whileLoop()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 119
                self.forLoop()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 120
                self.ifStatement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AssignmentContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(HelloParser.AssignmentContext, self).__init__(parent, invokingState)
            self.parser = parser

        def modifiablePrimary(self):
            return self.getTypedRuleContext(HelloParser.ModifiablePrimaryContext,0)


        def expression(self):
            return self.getTypedRuleContext(HelloParser.ExpressionContext,0)


        def getRuleIndex(self):
            return HelloParser.RULE_assignment

        def enterRule(self, listener):
            if hasattr(listener, "enterAssignment"):
                listener.enterAssignment(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitAssignment"):
                listener.exitAssignment(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitAssignment"):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = HelloParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.modifiablePrimary()
            self.state = 124
            self.match(HelloParser.T__12)
            self.state = 125
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RoutineCallContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(HelloParser.RoutineCallContext, self).__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(HelloParser.Identifier, 0)

        def expression(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(HelloParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(HelloParser.ExpressionContext,i)


        def getRuleIndex(self):
            return HelloParser.RULE_routineCall

        def enterRule(self, listener):
            if hasattr(listener, "enterRoutineCall"):
                listener.enterRoutineCall(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitRoutineCall"):
                listener.exitRoutineCall(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitRoutineCall"):
                return visitor.visitRoutineCall(self)
            else:
                return visitor.visitChildren(self)




    def routineCall(self):

        localctx = HelloParser.RoutineCallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_routineCall)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(HelloParser.Identifier)
            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==HelloParser.T__13:
                self.state = 128
                self.match(HelloParser.T__13)
                self.state = 129
                self.expression()
                self.state = 134
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==HelloParser.T__14:
                    self.state = 130
                    self.match(HelloParser.T__14)
                    self.state = 131
                    self.expression()
                    self.state = 136
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 137
                self.match(HelloParser.T__15)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class WhileLoopContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(HelloParser.WhileLoopContext, self).__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(HelloParser.ExpressionContext,0)


        def body(self):
            return self.getTypedRuleContext(HelloParser.BodyContext,0)


        def getRuleIndex(self):
            return HelloParser.RULE_whileLoop

        def enterRule(self, listener):
            if hasattr(listener, "enterWhileLoop"):
                listener.enterWhileLoop(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitWhileLoop"):
                listener.exitWhileLoop(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitWhileLoop"):
                return visitor.visitWhileLoop(self)
            else:
                return visitor.visitChildren(self)




    def whileLoop(self):

        localctx = HelloParser.WhileLoopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_whileLoop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(HelloParser.T__16)
            self.state = 142
            self.expression()
            self.state = 143
            self.match(HelloParser.T__17)
            self.state = 144
            self.body()
            self.state = 145
            self.match(HelloParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ForLoopContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(HelloParser.ForLoopContext, self).__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(HelloParser.Identifier, 0)

        def lang_range(self):
            return self.getTypedRuleContext(HelloParser.Lang_rangeContext,0)


        def body(self):
            return self.getTypedRuleContext(HelloParser.BodyContext,0)


        def getRuleIndex(self):
            return HelloParser.RULE_forLoop

        def enterRule(self, listener):
            if hasattr(listener, "enterForLoop"):
                listener.enterForLoop(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitForLoop"):
                listener.exitForLoop(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitForLoop"):
                return visitor.visitForLoop(self)
            else:
                return visitor.visitChildren(self)




    def forLoop(self):

        localctx = HelloParser.ForLoopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_forLoop)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.match(HelloParser.T__18)
            self.state = 148
            self.match(HelloParser.Identifier)
            self.state = 149
            self.match(HelloParser.T__19)
            self.state = 151
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==HelloParser.T__20:
                self.state = 150
                self.match(HelloParser.T__20)

